; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_int64.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_int64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }
%struct.bstr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32*, i32, i32, i8*)* @parse_int64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_int64(%struct.mp_log* %0, i32* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.bstr, align 4
  %7 = alloca %struct.bstr, align 4
  %8 = alloca %struct.mp_log*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = getelementptr inbounds %struct.bstr, %struct.bstr* %6, i32 0, i32 0
  store i32 %2, i32* %13, align 4
  %14 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  store i32 %3, i32* %14, align 4
  store %struct.mp_log* %0, %struct.mp_log** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  %15 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = getelementptr inbounds %struct.bstr, %struct.bstr* %6, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @parse_longlong(%struct.mp_log* %15, i32* %16, i32 %18, i32 %20, i64* %11)
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %12, align 4
  %23 = icmp sge i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %5
  %25 = load i8*, i8** %10, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %24
  %28 = load i64, i64* %11, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = bitcast i8* %29 to i64*
  store i64 %28, i64* %30, align 8
  br label %31

31:                                               ; preds = %27, %24, %5
  %32 = load i32, i32* %12, align 4
  ret i32 %32
}

declare dso_local i32 @parse_longlong(%struct.mp_log*, i32*, i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
